--- a/src/main/resources/static/web/views/accounts.html
+++ b/src/main/resources/static/web/views/accounts.html
@@ -137,7 +137,7 @@
 
                     <div class="container">
                       <h1 id="title" class="text-center text-light-emphasis">Your services</h1>
-                      <p class="mb-0 text-center text-light-emphasis fw-bold">here you can also see your services clicking on a box</p>
+                      <p class="mb-0 text-center text-light-emphasis fw-bold">here you can also see your services</p>
 
                       <div class="accounts-ilustration-services">
 
@@ -145,24 +145,33 @@
                     </div>
 
                   <div class="">
-                    <a href="./cards.html" class="container text-decoration-none border py-3 d-flex gap-3 col-9 mt-5">
+                    <a href="./cards.html" class="container position-relative text-decoration-none border py-3 d-flex gap-3 col-9 mt-5">
+                      <div class="position-absolute icon-card-xs">
+
+                      </div>
                         <div class="">
                             <h3 class="mb-0 text-light-emphasis">CARDS</h3>
-                            <p class="mb-0 text-secondary-emphasis">Here you can see the transfers you made</p>
+                            <p class="mb-0 text-secondary-emphasis">Here you can see the card you have</p>
                         </div>
                     </a>
     
-                    <a href="./transfer.html" class="container text-decoration-none border py-3 d-flex gap-3 col-9 mt-5">
+                    <a href="./transfer.html" class="container position-relative text-decoration-none border py-3 d-flex gap-3 col-9 mt-5">
+                      <div class="position-absolute icon-tranfer-xs">
+
+                      </div>
                         <div class="">
-                            <h3 class="mb-0 text-light-emphasis">TRABSFERS</h3>
+                            <h3 class="mb-0 text-light-emphasis">TRANSFERS</h3>
                             <p class="mb-0 text-secondary-emphasis">Here you can see the transfers you made</p>
                         </div>
                     </a>
     
-                    <a href="./transfer.html" class="container text-decoration-none border py-3 d-flex gap-3 col-9 mt-5">
+                    <a href="./transfer.html" class="container position-relative text-decoration-none border py-3 d-flex gap-3 col-9 mt-5">
+                      <div class="position-absolute icon-loans-xs">
+
+                      </div>
                         <div class="">
                             <h3 class="mb-0 text-light-emphasis">LOANS</h3>
-                            <p class="mb-0 text-secondary-emphasis">Here you can see the transfers you made</p>
+                            <p class="mb-0 text-secondary-emphasis">Here you can make loan</p>
                         </div>
                     </a>
                   </div>
