--- a/src/main/resources/static/web/views/transfer.html
+++ b/src/main/resources/static/web/views/transfer.html
@@ -127,7 +127,7 @@
                         {{errors}}
                       </div> -->
 
-                      <button type="submit" class="mt-2 mx-auto btn-loan">
+                      <button type="submit" class="mt-2 mx-auto text-white px-3 btn-loan">
                     
                         TRANSFER
                       </button>
