--- a/src/main/resources/static/web/css/transfer.css
+++ b/src/main/resources/static/web/css/transfer.css
@@ -66,7 +66,7 @@
     padding: 5px;
 }
 .transfers-bg{
-    background-image: url('../img/bg-cp.webp');
+    /* background-image: url('../img/bg-cp.webp'); */
     background-position: center;
     background-size: cover;
 }
@@ -104,15 +104,16 @@
         height: 62rem;
         z-index: -1;
     }
-    .tranfer-shape2{
+    .tranfer-shape2 {
         background-image: url('../img/Digital\ transformation-pana.png');
         background-position: center;
         background-size: contain;
+        background-repeat: no-repeat;
         position: absolute;
-        width: 13rem;
-        height: 12rem;
-        left: 3rem;
-        top: -6rem;
+        width: 24rem;
+        height: 25rem;
+        right: 3rem;
+        top: 6rem;
         z-index: -1;
     }
 }
