--- a/src/main/resources/static/web/views/loan-application.html
+++ b/src/main/resources/static/web/views/loan-application.html
@@ -103,7 +103,7 @@
 
                       <div  class="text-center text-danger">{{fields}}</div>
 
-                      <button type="submit" class="btn-loan col-3 text-white mx-auto">
+                      <button type="submit" class="btn-loan col-5 col-lg-3 text-white mx-auto">
                         GET LOAN
                       </button>
                      
@@ -113,8 +113,8 @@
             </form>
           </div>
 
-          <div class="d-flex gap-5 justify-content-center mt-5">
-            <div v-for="account of accounts"  class=" d-flex flex-column col-3 mt-4 gap-lg-5">
+          <div class="d-flex gap-2 justify-content-center mt-5">
+            <div v-for="account of accounts"  class=" d-flex flex-column col-6 col-lg-3 mt-4 gap-lg-5">
               <a :href="`./account.html?id=${account.id}`" class="container bg-account shadow col-9 col-md-6 col-lg-12 mt-lg-0 py-3 rounded border position-relative text-decoration-none">
                 <div v-show="account.accountType == 'CHECKING'" class=" text-center chekingAccount">CHECKING ACCOUNT</div>
                 <div v-show="account.accountType == 'SAVINGS'" class=" text-center savingsAccount accountType">SAVINGS ACCOUNT</div>
