changing placeholder index

--- a/src/main/resources/static/web/views/index.html
+++ b/src/main/resources/static/web/views/index.html
@@ -58,10 +58,10 @@
 
                                     <form @submit.prevent="signIn">
                                         <div class="form-group mb-3">
-                                            <input id="inputEmail" type="email" v-model="inputEmail"  placeholder="Email address" autofocus="" class="form-control rounded-pill border-0 shadow-sm px-4">
+                                            <input id="inputEmail" type="email" v-model="inputEmail"  placeholder="Email address user test -> (melba@mindhub.com)" autofocus="" class="form-control rounded-pill border-0 shadow-sm px-4">
                                         </div>
                                         <div class="form-group mb-3">
-                                            <input id="inputPassword" type="password" v-model="inputPassword"  placeholder="Password" class="form-control rounded-pill border-0 shadow-sm px-4 text-primary">
+                                            <input id="inputPassword" type="password" v-model="inputPassword"  placeholder="Password user test -> asd" class="form-control rounded-pill border-0 shadow-sm px-4 text-primary">
                                         </div>
                                         <!-- <div class="custom-control custom-checkbox mb-3">
                                             <template v-if="loginError">
